--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="descriptin" 
+        content="Rentomatic Web application">
+    <meta name="author" 
+        content="Mahrukh">
+
     <title>Rentomatic</title>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,7 +19,7 @@
         html{
             font-family: 'IBM Plex Serif', serif;
         }
-    </style>
+    </style> 
 </head>
 <body>
     <header>
