--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </section>
     <hr>
     <section>
-        <h1>Let's knwo about Rentomatic</h1>
+        <h1>Let's know about Rentomatic</h1>
         <p>
             <b>Rentomatic is basically a one stop rental shop where you can reant out anything</b>
         </p>
