--- a/index.html
+++ b/index.html
@@ -9,32 +9,29 @@
     <meta name="author" 
         content="Mahrukh">
 
+    <link rel="stylesheet" href="style.css" type="text/css">
     <title>Rentomatic</title>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 
-    <style>
-        html{
-            font-family: 'IBM Plex Serif', serif;
-        }
-    </style> 
+
 </head>
 <body>
     <header>
-        <a href="#">Rentomatic</a>
+        <a id="head" href="#">Rentomatic</a>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
-                <li><a href="#" target="_blank">About</a></li> <!--Yh page bnain gy In Sha Allah-->
-                <li><a href="#" target="_blank">Services</a></li> <!--Yhn page bnain gy In Sha Allah-->
-                <li><a href="#">Contact</a></li> 
+                <li><a href="#" target="_blank">About</a></li> 
+                <li><a href="#" target="_blank">Services</a></li>
+                <li id="last"><a href="#">Contact</a></li> 
             </ul>
         </nav>
     </header>
 
-    <section>
+    <section id="imgUpload">
         <img src="./Images/LogoFinal-removebg-preview.png" 
              alt="image of logo" 
              width="100" 
@@ -42,10 +39,10 @@
         <p><strong>Rentomatic</strong></p>
     </section>
     <hr>
-    <section>
+    <section id="desc">
         <h1>Let's know about Rentomatic</h1>
         <p>
-            <b>Rentomatic is basically a one stop rental shop where you can reant out anything</b>
+            <b>Rentomatic is basically a one stop rental shop where you can rent out anything</b>
         </p>
         <br>
         <figure>
@@ -64,8 +61,8 @@
              they need the data. It also <strong><em>enhances the customer's satisfactions</em></strong> because it will give clients a wide range of options, which include mode of payment and communication.
         </p>
         <br><br>
-        <p>
-            Thappa technical have already added video of Web Development on his <em><a href="https://www.youtube.com/watch?v=byTOONVJn-k" target="_blank">Youtube Channel</a></em>
+        <p id="descPara">
+            Thappa technical have already added video of Web Development on his <em><a href="https://www.youtube.com/watch?v=byTOONVJn-k" target="_blank" title="Thappa Technical Video Series">Youtube Channel</a></em>
         </p>
         <br><br>
         <p>
@@ -137,7 +134,7 @@
                 id="username"
                 name="username">
             <br> <br>
-            <label for="email">Email</label>
+            <label id="emailLabel"for="email">Email</label>
             <input type="email"
             placeholder="Your email"
             required
@@ -145,13 +142,18 @@
             name="email">
             <br> <br>
             <label for="message">Message</label><br>
-            <textarea name="message" id="message" cols="30" rows="8" placeholder="Enter your message"></textarea>
+            <textarea 
+                name="message" 
+                id="message" 
+                cols="50" rows="8" 
+                placeholder="Enter your message"
+                style="resize: none;"></textarea>
             <br>
             <input type="submit" value="Contact">
-            <footer>
-                <p>Copytight &copy;2022, All rights reserved | This template is made with hard work by Mahrukh</p>
-            </footer>
         </form>
+        <footer>
+            <p>Copytight &copy;2022, All rights reserved | This template is made with hard work by <strong>Mahrukh</strong></p>
+        </footer>
     </section>
 </body>
 </html>
