--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 </head>
 <body>
     <header>
+        <img src="./Images/LogoFinal-removebg-preview.png" 
+             alt="image of logo" 
+             width="10px" 
+             height="50px">
         <a id="head" href="#">Rentomatic</a>
         <nav>
             <ul>
@@ -31,13 +35,13 @@
         </nav>
     </header>
 
-    <section id="imgUpload">
+    <!-- <section id="imgUpload">
         <img src="./Images/LogoFinal-removebg-preview.png" 
              alt="image of logo" 
              width="100" 
              height="100">
         <p><strong>Rentomatic</strong></p>
-    </section>
+    </section> -->
     <hr>
     <section id="desc">
         <h1>Let's know about Rentomatic</h1>
@@ -145,7 +149,7 @@
             <textarea 
                 name="message" 
                 id="message" 
-                cols="50" rows="8" 
+                cols="40" rows="8" 
                 placeholder="Enter your message"
                 style="resize: none;"></textarea>
             <br>
